Added openapi yaml configuration for post and get request for categories Added logic for bull to use during local and production environment for redis made minor changes in the food_category Added error handler for food category for validator Added a bad request error handler for returning bad requests
